# hylo

./: .gitignore  README.md
firmware/: .clangd  CMakeLists.txt  CMakePresets.json
firmware/aidan_docs/: aidan.txt
firmware/app/: CMakeLists.txt
firmware/components/: CMakeLists.txt
firmware/components/app/: app.c  app.h
firmware/components/includes/: common.h
firmware/components/modules/: module.c  module.h
firmware/components/modules/bmi323_test/: bmi323_test.c  bmi323_test.h
firmware/components/modules/datalogger/: datalogger.c  datalogger.h
firmware/components/modules/dw3000_test/: dw3000_test.c  dw3000_test.h
firmware/components/modules/node/: node.c  node.h
firmware/components/modules/sensor_fusion/: sensor_fusion.c  sensor_fusion.h
firmware/components/modules/tdma/: tdma.c  tdma.h
firmware/components/modules/twr/: twr.c  twr.h
firmware/components/platform/: platform.c  platform.h
firmware/components/platform/gpio/: platform_gpio.c  platform_gpio.h
firmware/components/platform/spi/: platform_spi.c  platform_spi.h
firmware/components/platform/timer/: platform_timer.c  platform_timer.h
firmware/cubemx/: .mxproject  STM32H723XG_FLASH.ld  cubemx.ioc
firmware/cubemx/Core/Inc/: FreeRTOSConfig.h  main.h  spi.h
firmware/cubemx/Core/Src/: freertos.c  gpio.c  main.c  spi.c  tim.c
firmware/cubemx/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmware/cubemx/cmake/stm32cubemx/: CMakeLists.txt
firmware/lib/: CMakeLists.txt
firmware/lib/common/: common.h
firmware/lib/counter/: counter.c  counter.h
firmware/lib/mac_802154/: mac_802154.h
firmware/lib/state_machine/: state_machine.c  state_machine.h
firmware/modules/: CMakeLists.txt
firmware/platform/: CMakeLists.txt  platform.c  platform.h
firmware/platform/critical/: platform_critical.c  platform_critical.h
firmware/platform/gpio/: platform_gpio.c
firmware/platform/spi/: platform_spi.c  platform_spi.h
firmware/platform/timer/: platform_timer.c  platform_timer.h
firmware/ports/: CMakeLists.txt
firmware/ports/bmi323/: bmi323_port.c  bmi323_port.h
firmware/ports/dw3000/: dw3000_port.c  dw3000_port.h
firmware/simulation/tdma_twr_sim/rev1/: simulation.c  simulation.h
firmware/simulation/tdma_twr_sim/rev2/: BUILD.md  CMakeLists.txt  main.c  wave.gtkw
firmware/simulation/tdma_twr_sim/rev2/core/: node.c
firmware/simulation/tdma_twr_sim/rev2/include/: common.h  messages.h  node.h  phy.h  simulation.h  topology.h
firmware/simulation/tdma_twr_sim/rev2/node/: node.c
firmware/simulation/tdma_twr_sim/rev2/node/anchor/: anchor.c  anchor.h
firmware/simulation/tdma_twr_sim/rev2/node/tag/: tag.c
firmware/simulation/tdma_twr_sim/rev2/radio/: radio.c  radio.h
firmware/simulation/tdma_twr_sim/rev2/sim/: phy.c  simulation.c  timebase.c
firmware/simulation/tdma_twr_sim/rev2/tdma/: tdma.c  tdma.h
firmware/simulation/tdma_twr_sim/rev2/trace/: trace_vcd.c
firmware/simulation/tdma_twr_sim/rev3/: CMakeLists.txt
firmware/simulation/tdma_twr_sim/rev3/node/: node.h
firmware/simulation/tdma_twr_sim/rev3/node/anchor/: anchor.c
firmware/simulation/tdma_twr_sim/rev3/node/tag/: tag.h
firmware/simulation/tdma_twr_sim/rev3/radio/: radio.h
firmware/simulation/twr_sim/: simulation.c
firmware/twr_sim/: main.c  node.c  node.h
simulation/tdma_twr_sim/rev1/: main.c  node.c  node.h  simulation.c  simulation.h
simulation/tdma_twr_sim/rev2/include/: timebase.h  trace_vcd.h
simulation/tdma_twr_sim/rev2/sim/: topology.c
simulation/tdma_twr_sim/rev3/include/: common.h
simulation/tdma_twr_sim/rev3/node/: node.h
simulation/tdma_twr_sim/rev3/node/anchor/: anchor.h
simulation/tdma_twr_sim/rev3/node/tag/: tag.c  tag.h
simulation/tdma_twr_sim/rev3/radio/: radio.c
simulation/tdma_twr_sim/rev3/tdma/: tdma.h
